root farben hinzugefügt

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>Blog App</h1>
+<h1 class="text-primary">Blog App</h1>
+<p>App Component</p>
+
+<app-header></app-header>
+
 <router-outlet></router-outlet>
