bootsrap benutzt für navigations elemente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<h1 class="text-primary">Blog App</h1>
-<p>App Component</p>
-
 <app-header></app-header>
+
+<app-category-navbar></app-category-navbar>
 
 <router-outlet></router-outlet>
