--- a/src/app/subscription-form/subscription-form.component.html
+++ b/src/app/subscription-form/subscription-form.component.html
@@ -1,1 +1,26 @@
-<p>subscription-form works!</p>
+<div class="card">
+    <div class="card-body">
+    <div class="text-center mt-3 mb-5">
+        <h3>SUBSCRIPTION FORM</h3>
+        <p class="m-auto subs-text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti suscipit quasi blanditiis. Totam repellat labore distinctio? Maxime nulla dignissimos placeat expedita itaque ipsum, in tenetur odit velit fuga quos sed.
+        </p>
+
+        <form action="" class="form-inline mb-5">
+
+            <div class="form-groupe col-md-5">
+                <input type="text" class="form-control" placeholder="Your Name">
+            </div>
+            <div class="form-groupe col-md-5">
+                <input type="email" class="form-control" placeholder="Email Address">
+            </div>
+
+            <div class="col-md-2">
+                <button class="btn btn-info btn-block btn-sub">SUBSCRIBE</button>
+            </div>
+
+        </form>
+
+    </div>
+    </div>
+</div>
