--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card shadow-effect">
     <img src="https://images.unsplash.com/photo-1649125233755-a649dfce95b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="post-image" class="card-img-top">
     <div class="card-body">
         <small class="bg-light text-danger text-center">
