neue blog elemente eingefügt

--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,1 +1,33 @@
-<p>single-post works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1689975767072-bc518b0e1f66?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="sun image" class="card-img-top img-fluid">
+                <div class="card-body">
+                    <small class="bg-light text-danger text-center">
+                        Design
+                    </small>
+                    <small class="bg-light text-success text-center ml-2">
+                        Featured
+                    </small>
+                    <small class="bg-light text-info text-center">
+                        Views - 505,636
+                    </small>
+                    <small class="bg-light text-warning text-center">
+                        LAST UPDATED - 17. FEBRUAR, 2023
+                    </small>
+
+                    <h1 class="mt-3 mb-3">HOW TO START A BLOG IN 2023 EDITED NEW CATEGORY</h1>
+
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magni totam recusandae? Officiis maxime animi hic in temporibus reprehenderit, minima magni, aperiam iste consectetur modi obcaecati aspernatur dicta repellat ipsum.
+                    Assumenda doloremque ducimus odio repellendus neque a praesentium facilis cum eum iste, perspiciatis maxime quas quisquam itaque molestias unde accusantium eligendi animi nostrum sint cupiditate, nisi maiores, amet fugit. Tenetur!
+                    Iste omnis perspiciatis beatae soluta quis eaque maiores velit fugit, sequi alias cumque illo debitis, eius aspernatur. Laborum, debitis, a aliquid optio deserunt odit facilis ipsa est, facere laboriosam necessitatibus.
+                    Quas sequi consequatur ea eos possimus excepturi deleniti! Error, molestiae nobis voluptate, praesentium cumque doloribus ab neque architecto laborum harum earum saepe eaque veritatis optio maiores soluta. Doloremque, numquam cupiditate?
+                    Mollitia maxime odit optio repudiandae quasi voluptas iusto similique, autem fugit animi facere nesciunt, ipsa ex nam magni! Officiis, iusto impedit. Libero a itaque maxime, et quasi earum tempore magni.</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+</div>
