--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <div class="app-body">
     <router-outlet></router-outlet>
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
 </div>
 
 <div class="container mt-5 mb-5">
