--- a/src/app/comments/comment-form/comment-form.component.html
+++ b/src/app/comments/comment-form/comment-form.component.html
@@ -1,1 +1,20 @@
-<p>comment-form works!</p>
+<div class="card mt-5 shadow-effect">
+    <div class="card-body">
+        <h4>Comments section</h4>
+        <p>Use the commend form to share your ideas</p>
+
+        <form>
+            <div class="form-group">
+                <label for="">Name</label>
+                <input type="text" class="form-control shadow-effect" placeholder="Enter your Name here">
+            </div>
+
+            <div class="form-group">
+                <label for="">Comments</label>
+                <textarea cols="30" rows="10" class="form-control shadow-effect" placeholder="Enter your comment here"></textarea>
+            </div>
+
+            <button class="btn btn-info btn-theme">Add a Comment</button>
+        </form>
+    </div>
+</div>
