--- a/src/app/comments/comment-list/comment-list.component.html
+++ b/src/app/comments/comment-list/comment-list.component.html
@@ -1,1 +1,49 @@
-<p>comment-list works!</p>
+<div class="card md-5 mt-5 pb-5 shadow-effect">
+    <div class="card-body">
+        <h4 class="mt-3 mb-3">Comments (15,277)</h4>
+
+        <div class="comment-box mt-3">
+            <h6 class="mb-0">Tim Mand</h6>
+            <small class="text-danger">LAST UPDATE - 22. FEBUARY, 2023</small>
+
+            <div class="mt-3 mb-3">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, cupiditate magnam asperiores perspiciatis quasi quisquam nobis cum, est voluptatum nisi ratione voluptatem neque optio itaque ut animi, voluptates impedit recusandae.
+            </div>
+
+            <a href="#" class="mt-1">Reply</a>
+            <a href="#" class="mt-1 ml-3">View Reply</a>
+
+            <hr>
+
+        </div>
+
+        <div class="comment-box mt-3">
+            <h6 class="mb-0">Tim Mand</h6>
+            <small class="text-danger">LAST UPDATE - 22. FEBUARY, 2023</small>
+
+            <div class="mt-3 mb-3">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, cupiditate magnam asperiores perspiciatis quasi quisquam nobis cum, est voluptatum nisi ratione voluptatem neque optio itaque ut animi, voluptates impedit recusandae.
+            </div>
+
+            <a href="#" class="mt-1">Reply</a>
+            <a href="#" class="mt-1 ml-3">View Reply</a>
+
+            <hr>
+
+        </div>
+        <div class="comment-box mt-3">
+            <h6 class="mb-0">Tim Mand</h6>
+            <small class="text-danger">LAST UPDATE - 22. FEBUARY, 2023</small>
+
+            <div class="mt-3 mb-3">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, cupiditate magnam asperiores perspiciatis quasi quisquam nobis cum, est voluptatum nisi ratione voluptatem neque optio itaque ut animi, voluptates impedit recusandae.
+            </div>
+
+            <a href="#" class="mt-1">Reply</a>
+            <a href="#" class="mt-1 ml-3">View Reply</a>
+
+            <hr>
+
+        </div>
+    </div>
+</div>
