--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,22 @@
-<p>about-us works!</p>
+<section class="mt-5">
+    <div class="container mt-5 mb-5 p-5 bg-theme">
+
+        <h1 class="text-white text-center">
+            About Us
+        </h1>
+
+        <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem obcaecati laborum, earum in praesentium ut libero et adipisci consequuntur eum? Incidunt nulla eligendi temporibus adipisci repellat mollitia modi, possimus dolorum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem obcaecati laborum, earum in praesentium ut libero et adipisci consequuntur eum? Incidunt nulla eligendi temporibus adipisci repellat mollitia modi, possimus dolorum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem obcaecati laborum, earum in praesentium ut libero et adipisci consequuntur eum? Incidunt nulla eligendi temporibus adipisci repellat mollitia modi, possimus dolorum!</p>
+
+            <div class="text-center">
+                <button class="btn btn-info btn-sm mt-4 btn-theme">
+                    Back to the Home
+                </button>
+            </div>
+
+        </div>
+    </div>
+</section>
