--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,14 @@ body{
     background-color: var(--primary-color); 
 }
 
+.bg-secondary-theme {
+    background-color: var(--secondary-color);
+}
+
+.text-theme-primary {
+    color: var(--primary-color);
+}
+
 input[type=text], input[type=email] {
     height: 60px;
     padding-left: 20px;
@@ -48,3 +56,4 @@ input[type=text], input[type=email] {
     font-size: 13px;
     background-color: var(--primary-color);
 }
+
